k8s-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-backend
  template:
    metadata:
      labels:
        app: k8s-backend
    spec:
      containers:
      - name: backend
        image: sinaxrh/k8s-backend:v1
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-backend-service
spec:
  selector:
    app: k8s-backend
  ports:
  - port: 8000
    targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-frontend
  template:
    metadata:
      labels:
        app: k8s-frontend
    spec:
      containers:
      - name: frontend
        image: sinaxrh/k8s-frontend:v1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-frontend-service
spec:
  selector:
    app: k8s-frontend
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-app-ingress
spec:
  rules:
  - host: rahimi.osdl.ir
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: k8s-frontend-service
            port:
              number: 80
  - host: api.rahimi.osdl.ir
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: k8s-backend-service
            port:
              number: 8000
